@@ -1,8 +1,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([Darkbot],[8rc2],[ron@darkbot.org])
-AC_COPYRIGHT([Copyright 1996-2006 Darkbot Development Team])
+AC_INIT([Darkbot],[8rc2],[darkbot-devel@lists.sourceforge.net])
+AC_COPYRIGHT([Copyright 1996-2007 Darkbot Development Team])
 AC_REVISION($Revision$)
 AC_CONFIG_AUX_DIR([auxdir])
 AC_CONFIG_LIBOBJ_DIR([../source/compat])
@@ -71,6 +71,7 @@ DB_ENABLE_COMMAND([METAR],[yes],[METAR])
 DB_ENABLE_COMMAND([TAF],[yes],[TAF])
 DB_ENABLE_COMMAND([quiz],[no],[QUIZ])
 DB_ENABLE_COMMAND([randq],[yes],[RANDQ])
+DB_ENABLE_COMMAND([stats],[yes],[STATS])
 DB_ENABLE_GENERIC([status],[no],[STATUS],[display of network status])
 DB_ENABLE_GENERIC([stoned],[yes],[STONED_CHECK],[server stoned check])
 DB_ENABLE_GENERIC([version],[no],[VERSION_CHECK],[new darkbot version check])
