@@ -102,7 +102,7 @@ void		do_random_stuff					(void)
 
 	while(fgets(szBuffer, STRING_LONG, fp))
 	{
-		// Ignore comments that start with a /, treat as comments.
+		// Ignore lines that start with a /, treat as comments.
 		if((*szBuffer != '/') && (*szBuffer != '\n'))
 			nIndex++;
 		else
